# SeetaAIPLib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.cmake.md  README.introduction.md  README.md
cmake/: FLAGS_GCC.cmake  FindTenniS.cmake  LOCAL_FLAGS.cmake  use_openmp.cmake  use_submodule.cmake
cmake/plugin/: 0.readme.cmake
fake/tennis/: CMakeLists.txt
fake/tennis/src/: fake.cpp
script/: rename.sh
script/cmake/: android-arm64-v8a.sh  android-armeabi-v7a.sh  android-x86.sh  android-x86_64.sh  ios-arm64.sh  ios-armv7.sh  ios-x86_64.sh  linux-ix86.sh  windows-vs2019.ps1
src/: lib.cpp
template/: Info.plist.in  module_aip_load.h.in  this_aip_load.h.in
test/: test.cpp
toolchain/: ios.toolchain.cmake
